Terraform/Deploying/aws/02-Advanced/2AM-2SM-LB/98_integration_debian.tf
// Generate Deian Cloud Init file from template

data "template_file" "debian" {
  template = file("cloud-init-conf-DEBIAN.tpl")
}

// Get latest Debian Linux AMI
data "aws_ami" "debian-linux" {
  most_recent = true
  owners      = ["679593333241"]

  filter {
    name   = "name"
    values = ["debian-11*"]
  }

}

// Create a network interface
resource "aws_network_interface" "debian-linux" {
  subnet_id       = aws_subnet.subnet_az1_AM.id
  security_groups = [aws_security_group.debian_admin.id]

  tags = {
    Name = "primary_network_interface"
  }

}

resource "aws_instance" "debian_admin" {
  ami           = data.aws_ami.debian-linux.id
  instance_type = var.aws_instance_size_debian

  key_name = aws_key_pair.key_pair.key_name

  user_data = data.template_file.debian.rendered


  network_interface {
    network_interface_id = aws_network_interface.debian-linux.id
    device_index         = 0
  }

  tags = {
    Project = local.project_name
  }

}

// Create a public IP and associate it to the Debian machine
resource "aws_eip" "ip_public_debian_admin" {
  domain            = "vpc"
  network_interface = aws_network_interface.debian-linux.id

  tags = {
    Project = local.project_name
  }

}
// Push the generated ssh key on the debian host
resource "null_resource" "provisionning" {
  depends_on = [
    aws_eip.ip_public_debian_admin,
    aws_instance.debian_admin
  ]

  provisioner "file" {
    source      = "private_key.pem"
    destination = "/home/admin/.ssh/id_rsa"

    connection {
      type        = "ssh"
      user        = "admin"
      private_key = tls_private_key.key_pair.private_key_pem
      host        = aws_instance.debian_admin.public_ip
    }
  }

}

// Security Group
resource "aws_security_group" "debian_admin" {
  name        = "firewall-${local.project_name}-debian-admin"
  description = "Allow traffic for ${local.project_name}"
  vpc_id      = aws_vpc.cluster.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = concat(var.allowed_ips, local.sm_instances)
  }

  ingress {
    description = "RAWTCPIP_TEST"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = local.sm_instances
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Project = local.project_name
  }

}
